feat(sdk-go): Add StructDef get, search, delete (#1833)